--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.3.4",
+        "@tailwindcss/line-clamp": "^0.4.4",
+        "classnames": "^2.5.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.22.1"
+        "react-hook-form": "^7.50.1",
+        "react-router-dom": "^6.22.1",
+        "yup": "^1.3.3"
     },
     "devDependencies": {
         "@types/node": "^20.11.20",
